button overflow fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,7 +59,7 @@ input:-webkit-autofill, input:-webkit-autofill:focus {
     -webkit-text-fill-color: var(--text) !important
 }
 
-input {
+input, button {
     overflow: visible;
 }
 
